--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
-/*  your css code here. If applicable */
+h1{
+  text-align: center;
+}
+
+table{
+  width: 100%;
+  border-collapse: collapse;
+}
+tr,td{
+  border: 1px solid black;
+}
+#t11{
+  text-align: left;
+}
+#t12{
+  text-align: center;
+}
+#t13{
+  text-align: right;
+}
+
+.green{
+  background-color: green;
+}
+
+.blue{
+  background-color: blue;
+}
+
+#t-image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
